<resources>
    <string name="app_name">DemoApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="description">description</string>
    <string name="prototype_text_userName">Phan Thanh Tú</string>
    <string name="prototype_text_teamName">Friday Legend</string>
    <string name="prototype_text_level">Trung bình/ yếu</string>
    <string name="prototype_text_description">Đội yếu nhớti, nên không có gì phải ghi ra cho nhiều. Vậy là đủ nhiều rồ</string>

    <string name="hardCode_text_favorite">Sân yêu thích</string>
    <string name="hardCode_text_reserveHistory">Lịch sử đặt sân</string>
    <string name="hardCode_text_postHistory">Lịch sử bài đăng</string>
    <string name="hardCode_text_hintContent">Bạn muốn góp kèo ?</string>
    <string name="hardCode_text_post">Đăng</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="hardCode_text_phone">Điện thoại</string>
    <string name="hardCode_text_password">Mật khẩu</string>
    <string name="hardCode_text_login">Đăng nhập</string>
    <string name="hardCode_text_createOneAccount">Chưa có tài khoản ? Tạo mới</string>
    <string name="hardCode_text_name">Tên</string>
    <string name="hardCode_text_team">Tên đội</string>
    <string name="hardCode_text_retypePassword">Nhập lại mật khẩu</string>
    <string name="hardCode_text_haveAccount">Đã có tài khoản ? Đăng nhập</string>
    <string name="hardCode_createAccount">Tạo tài khoản mới</string>
    <string name="hardCode_text_whatTypeSearch">Bạn muốn tìm sân theo loại nào ?</string>
    <string name="hardCode_text_followPitch">Tìm theo sân</string>
    <string name="hardCode_text_followDate">Tìm theo ngày</string>
    <string name="hardCode_text_createPost">Tạo bài viết</string>

</resources>
