<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scvSignUpAct_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/layoutSignUpAct_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/imvSignUpAct_logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/description"/>

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpAct_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtSignUpAct_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hardCode_text_name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!-- Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpAct_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtSignUpAct_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hardCode_text_phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <!-- TeamName Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpAct_teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtSignUpAct_teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hardCode_text_team"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpAct_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtSignUpAct_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hardCode_text_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpAct_retypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtSignUpAct_retypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hardCode_text_retypePassword"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUpAct_signUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/hardCode_createAccount" />

        <TextView
            android:id="@+id/tvSignUpAct_SignIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/hardCode_text_haveAccount"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>