<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.search.SearchFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardCode_text_whatTypeSearch"
        android:paddingTop="@dimen/padding_xxl"
        android:layout_marginBottom="@dimen/margin_m"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_l"
        android:layout_marginLeft="@dimen/margin_xs"
        android:layout_marginRight="@dimen/margin_xs">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imvSearchFra_followPitch"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/description"/>
            <TextView
                android:id="@+id/tvSearchFra_followPitch"
                android:layout_below="@+id/imvSearchFra_followPitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hardCode_text_followPitch"
                android:textSize="@dimen/text_input_m"
                android:textAlignment="center"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_m"
        android:layout_marginBottom="@dimen/margin_l"
        android:layout_marginLeft="@dimen/margin_xs"
        android:layout_marginRight="@dimen/margin_xs">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imvSearchFra_followTime"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/description"/>
            <TextView
                android:id="@+id/tvSearchFra_followTime"
                android:layout_below="@+id/imvSearchFra_followTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hardCode_text_followTime"
                android:textSize="@dimen/text_input_m"
                android:textAlignment="center"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>